--- a/index.html
+++ b/index.html
@@ -1860,7 +1860,13 @@
                       </div>
                     </div>
                   </div>
-                  <iframe src="http://local.eventtus.com:7000/event/nxclve6riyr3m3utrg3d74t69z49iund/agenda" style="border: none; margin: 0px; width: 100%; display: block; height: calc(100vh - 100px);"></iframe>
+                  <div style="overflow: auto; -webkit-overflow-scrolling: touch; height: 300px">
+                    <iframe 
+                      src="http://local.eventtus.com:7000/event/nxclve6riyr3m3utrg3d74t69z49iund/agenda" 
+                      style="display: block; width: 100vw; height: 100vh; border: none; margin: 0px"
+                      >
+                    </iframe>
+                  </div>
                   <div id="why-ecommerce"
                     class="vc_row wpb_row vc_row-fluid container empty vc_custom_1561024088010 vc_row-has-fill vc_row-o-content-middle vc_row-flex">
                     <div class="what-is-ecs__title wpb_column vc_column_container vc_col-sm-6 vc_col-xs-12">
