--- a/index.html
+++ b/index.html
@@ -1862,7 +1862,7 @@
                   </div>
                   <div style="overflow: auto; -webkit-overflow-scrolling: touch; height: 300px">
                     <iframe 
-                      src="http://local.eventtus.com:7000/event/nxclve6riyr3m3utrg3d74t69z49iund/agenda" 
+                      src="https://explore.gravity.eventtus.com/event/1fz4z8odv4t9hwznsyud83sf1fa8o6zu/agenda" 
                       style="display: block; width: 100vw; height: 100vh; border: none; margin: 0px"
                       >
                     </iframe>
