--- a/index.html
+++ b/index.html
@@ -1863,7 +1863,7 @@
                   <div style="overflow: auto; -webkit-overflow-scrolling: touch; height: 300px">
                     <iframe 
                       src="https://explore.gravity.eventtus.com/event/1fz4z8odv4t9hwznsyud83sf1fa8o6zu/agenda" 
-                      style="display: block; width: 100vw; height: 100vh; border: none; margin: 0px"
+                      style="max-width: 100%; min-width: 100%; width: 0; height: 100vh;"
                       >
                     </iframe>
                   </div>
