--- a/index.html
+++ b/index.html
@@ -1860,10 +1860,11 @@
                       </div>
                     </div>
                   </div>
-                  <div style="height: 100vh; overflow-y: scroll">
+                  <div style="height: 100vh; overflow-y: scroll; -webkit-overflow-scrolling: touch;">
                     <iframe 
                       src="https://explore.gravity.eventtus.com/event/1fz4z8odv4t9hwznsyud83sf1fa8o6zu/agenda" 
                       style="width: 100vw"
+                      frameborder="0"
                       scrolling="no"
                       >
                     </iframe>
