--- a/index.html
+++ b/index.html
@@ -1863,7 +1863,7 @@
                   <div style="height: 100vh; overflow-y: scroll; -webkit-overflow-scrolling: touch;">
                     <iframe 
                       src="https://explore.gravity.eventtus.com/event/1fz4z8odv4t9hwznsyud83sf1fa8o6zu/agenda" 
-                      style="width: 100vw"
+                      style="width: 100vw; height: 100%"
                       frameborder="0"
                       scrolling="no"
                       >
