--- a/index.html
+++ b/index.html
@@ -1860,7 +1860,7 @@
                       </div>
                     </div>
                   </div>
-                  <div style="height: 100vh; -webkit-overflow-scrolling: touch;">
+                  <div style="height: 100vh; overflow: scroll; -webkit-overflow-scrolling: touch">
                     <iframe 
                       src="https://explore.gravity.eventtus.com/event/1fz4z8odv4t9hwznsyud83sf1fa8o6zu/agenda" 
                       style="width: 100vw; height: 100%"
