--- a/index.html
+++ b/index.html
@@ -1860,10 +1860,10 @@
                       </div>
                     </div>
                   </div>
-                  <div style="height: 100vh; overflow-y: scroll; overflow-x: hidden;">
+                  <div style="height: 100vh;">
                     <iframe 
                       src="https://explore.gravity.eventtus.com/event/1fz4z8odv4t9hwznsyud83sf1fa8o6zu/agenda" 
-                      style="width: 100vw; height: 100%"
+                      style="height: 0; max-height: 100%; max-width: 100%; min-height: 100%; min-width: 100%; width: 0;"
                       frameborder="0"
                       scrolling="no"
                       >
