--- a/index.html
+++ b/index.html
@@ -1860,15 +1860,11 @@
                       </div>
                     </div>
                   </div>
-                  <div style="height: 100vh;">
-                    <iframe 
-                      src="https://explore.gravity.eventtus.com/event/1fz4z8odv4t9hwznsyud83sf1fa8o6zu/agenda" 
-                      style="height: 0; max-height: 100%; max-width: 100%; min-height: 100%; min-width: 100%; width: 0;"
-                      frameborder="0"
-                      scrolling="no"
-                      >
-                    </iframe>
-                  </div>
+                  <iframe 
+                    src="http://7683ccf1.ngrok.io/event/1fz4z8odv4t9hwznsyud83sf1fa8o6zu/agenda" 
+                    style="display: block; width: 100%; height: 100%; border: none; margin: 0px"
+                    >
+                  </iframe>
                   <div id="why-ecommerce"
                     class="vc_row wpb_row vc_row-fluid container empty vc_custom_1561024088010 vc_row-has-fill vc_row-o-content-middle vc_row-flex">
                     <div class="what-is-ecs__title wpb_column vc_column_container vc_col-sm-6 vc_col-xs-12">
