--- a/index.html
+++ b/index.html
@@ -1862,7 +1862,7 @@
                   </div>
                   <iframe 
                     src="https://7683ccf1.ngrok.io/event/1fz4z8odv4t9hwznsyud83sf1fa8o6zu/agenda" 
-                    style="display: block; width: 100%; height: 100%; border: none; margin: 0px"
+                    style="border: none; margin: 0px; width: 100%; display: block; height: calc(100vh - 100px);"
                     >
                   </iframe>
                   <div id="why-ecommerce"
