--- a/index.html
+++ b/index.html
@@ -1861,7 +1861,7 @@
                     </div>
                   </div>
                   <iframe 
-                    src="https://explore.gravity.eventtus.com/event/1fz4z8odv4t9hwznsyud83sf1fa8o6zu/agenda" 
+                    src="https://explore.eventtus.com/event/dpl4oc9ohonjhxsac82jkbi9uvp8652l/agenda" 
                     style="border: none; margin: 0px; width: 100%; display: block; height: calc(100vh - 100px);"
                     >
                   </iframe>
